--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </nav>
   <div class="container">
     <div class="h1">Roosters R Us</div>
-    <div class="cover"><img class= "main-image" src="./img/Chicken.png"></div>
+    <div class="cover"><img class= "main-image" src="./img/chicken.png"></div>
   </div>
   <div class="zone orange grid-wrapper">
 		 <div class="box zone"><img class="img2" src="./img/1.png"></div>
